# Tecnicas-Algoritmicas-TP1-Algo-3

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  ej1.cpp  ej2_arreglo.cpp  ej3.cpp  ej4.cpp  entry_point.sh
ejercicios/: actividades_dinamico.cpp  ej12.cpp  ej12.h
